# ChangeLog for dev-python/pip
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Apr 2010; Poluhin Vladislav (nuklea) <nuklea@gmail.com>
  +pip-0.7.1.ebuild, +metadata.xml:
  New Ebuild for bug 317791 thanks to xmw
