@@ -1,4 +1,4 @@
-DIST pip-0.7.1.tar.gz 82468 RMD160 3a725ff2c94b0197d5592d324069d7c1b6e316e9 SHA1 89953d0573acdf3006747b57b5a62169d103b2cd SHA256 f54f05aa17edd0036de433c44892c8fedb1fd2871c97829838feb995818d24c3
-EBUILD pip-0.7.1.ebuild 909 RMD160 cab740198b7b973294a307b4503e06e0683e42bc SHA1 75e257b646576e2fc2566cd9dd3c045d9ca9f4ff SHA256 534f9dd0a049ea6fb56cefc4d5bb48dcd1a87d280dd538f82e8ade33f9263f16
-MISC ChangeLog 255 RMD160 531a720a3ec520b9258c7f8a472638b6ae66f381 SHA1 c8e1dbefc5cad08e94f8b16fed38912f3c0c0589 SHA256 33217c41f8dddd92a0bd747a2eccf79d874f0dc72cf49ac7509d120c3c413223
+DIST pip-0.7.2.tar.gz 68698 RMD160 2736c4e1f1a21c3fe53b3b23eb438cbd3d68c8a5 SHA1 3843101cd594e28468763a21d1f94a4a5a2cbc06 SHA256 98df2eb779358412bbbae75980171ae85deebc846d87e244d086520b1212da09
+EBUILD pip-0.7.2.ebuild 902 RMD160 13a85eb48740af1fe2c9d72c15afe7c13102939b SHA1 b56ceea2708cdcf606711e95ef43bc8c68838d69 SHA256 57f5b07ee49aeac3b0c058d97e7ae7b71a730b79d2df4e7f931417752aa42731
+MISC ChangeLog 372 RMD160 61d9abe7c17c1a29205cb472da5690e8a7bcc360 SHA1 fc4f5ba7229bdec0f8530c7be87a7482e3977e74 SHA256 3bcb440e2e7aac22918ddd98a510dd1932d2e35fb123a45f13c13aeb19ad092c
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
