@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Jun 2010; Poluhin Vladislav (nuklea) <nuklea@gmail.com>
+  -pip-0.7.1.ebuild, +pip-0.7.2.ebuild:
+  Version bump
+
   29 Apr 2010; Poluhin Vladislav (nuklea) <nuklea@gmail.com>
   +pip-0.7.1.ebuild, +metadata.xml:
   New Ebuild for bug 317791 thanks to xmw
